# pact-sync-message-test-plugin

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md  pact-plugin.json  release.sh
.github/workflows/: ci.yml  release.yml
examples/consumer-test/: Cargo.toml
examples/consumer-test/src/: lib.rs
proto/: plugin.proto
scripts/: gzip-and-sum.sh
src/: main.rs  proto.rs
