[package]
name = "pact-sync-message-test-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { version = "1.6.1", features = ["v4"] }
log = "0.4"
maplit = "1.0.2"
pact_models = "~1.1.17"
serde_json = "1.0.108"
anyhow = "1.0.75"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-core = "0.1"

[build-dependencies]
tonic-build = "0.10.2"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
