[package]
name = "consumer-test"
version = "0.1.0"
edition = "2021"

[dependencies]
pact_consumer = "~1.4.1"
pact_models = "~1.3.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
test-log = "0.2"
expectest = "0.12"
bytes = { version = "1", features = ["serde"] }
maplit = "1.0.2"
regex = "1"
